# django-markdown-editor

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .semantic-release.toml  .travis.yml  Dockerfile  MANIFEST.in  README.md  README.rst  build-publish.md  docker-compose.yaml  foob.txt  manage.py  nginx.default  push.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements2.txt  runtests.py  setup.cfg  setup.py  start-server.sh  tanu99.pub  tox.ini  umesh  upload.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: github-actions-demo.yml  push-image.yml  release.yml  run-tests.yml
.semaphore/: pipeline_2.yml  semaphore.yml
docs/: Makefile  changelog.rst  conf.py  contributing.rst  faq.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  settings.rst  troubleshooting.rst
docs/api/: fields.rst
docs/examples/: basic.rst
docs/usage/: admin.rst  forms.rst  models.rst  templates.rst  widgets.rst
draceditor/: __init__.py  admin.py  api.py  fields.py  models.py  settings.py  urls.py  utils.py  views.py  widgets.py
draceditor/extensions/: del_ins.py  emoji.py  mention.py
draceditor/locale/en/LC_MESSAGES/: django.mo  django.po
draceditor/locale/id/LC_MESSAGES/: django.mo  django.po
draceditor/static/css/: draceditor.css
draceditor/static/draceditor/js/: draceditor.js
draceditor/static/js/: draceditor-old.js  draceditor.js
draceditor/static/plugins/css/: atwho.css  codemirror.css  htmleditor.gradient.min.css  semantic.min.css
draceditor/static/plugins/js/: atwho.min.js  caret.min.js  codemirror.min.js  emojis.min.js  ext-language_tools.js  marked-emoji.js  marked.min.js  mode-markdown.js  semantic.min.js  theme-github.js
draceditor/static/plugins/js/snippets/: markdown.js
draceditor/templates/: editor.html
draceditor/templates/draceditor/: editor.html  emoji.html  guide.html  toolbar.html
draceditor/templatetags/: dractags.py
draceditor_demo/: manage.py
draceditor_demo/app/: admin.py  forms.py  models.py  urls.py  views.py
draceditor_demo/app/migrations/: 0001_initial.py
draceditor_demo/app/templates/: base.html  custom_form.html  test_markdownify.html
draceditor_demo/draceditor_demo/: settings.py  urls.py  wsgi.py
hi.txt/: hi.txt
martor/: __init__.py  admin.py  api.py  fields.py  models.py  settings.py  settings.py.save  tests.py  urls.py  utils.py  views.py  widgets.py
martor/extensions/: del_ins.py  emoji.py  escape_html.py  mdx_add_id.py  mdx_video.py  mention.py  urlize.py
martor/locale/en/LC_MESSAGES/: django.mo  django.po
martor/locale/id/LC_MESSAGES/: django.mo  django.po
martor/locale/tr/LC_MESSAGES/: django.mo  django.po
martor/static/dicts/: typo.js
martor/static/martor/css/: martor-admin.css  martor-admin.min.css  martor-preview.css  martor.bootstrap.css  martor.bootstrap.min.css  martor.css  martor.min.css  martor.semantic.css  martor.semantic.min.css  martor.tailwind.css  martor.tailwind.min.css
martor/static/martor/js/: martor.bootstrap.js  martor.bootstrap.min.js  martor.js  martor.min.js  martor.semantic.js  martor.semantic.min.js  martor.tailwind.js  martor.tailwind.min.js
martor/static/plugins/css/: ace.min.css  bootstrap.min.css  semantic.min.css  tailwind.min.css
martor/static/plugins/js/: ace.js  ext-language_tools.js  mode-markdown.js  spellcheck.js  theme-github.js  typo.js
martor/static/plugins/js/snippets/: markdown.js
martor/templates/martor/: editor.html  guide.html  toolbar.html
martor/templates/martor/bootstrap/: editor.html  emoji.html  guide.html  toolbar.html
martor/templates/martor/semantic/: editor.html  guide.html  toolbar.html
martor/templates/martor/tailwind/: editor.html  emoji.html  guide.html  toolbar.html
martor/templatetags/: martortags.py
martor/tests/: models.py  tests.py  urls.py  views.py
martor_demo/: db.sqlite3  manage.py  views.py
martor_demo/app/: admin.py  forms.py  models.py  testPost.py  testPosts.py  urls.py  views.py
martor_demo/app/migrations/: .gitignore
martor_demo/app/templates/: base.html  base.html.py  custom_form.html  test_markdonify.html  test_markdownify.html
martor_demo/app/templates/bootstrap/: base.html  form.html  test_markdownify.html
martor_demo/app/templates/semantic/: base.html  form.html  test_markdownify.html
martor_demo/app/templates/tailwind/: base.html  form.html  test_markdownify.html
martor_demo/martor_demo/: asgi.py  settings.py  urls.py  views.py  wsgi.py
martor_demo/martor_static/martor/css/: martor.semantic.css
martor_demo/martor_static/plugins/js/snippets/: markdown.js
martor_demo/static/martor/css/: martor-admin.min.css  martor.bootstrap.css  martor.bootstrap.min.css  martor.semantic.css  martor.semantic.min.css
martor_demo/static/martor/js/: martor.bootstrap.js  martor.bootstrap.min.js  martor.js  martor.semantic.js  martor.semantic.min.js
martor_demo/static/plugins/js/: ace.js  bootstrap.min.js  theme-github.js
tests/collect-static/: README.md  test-collectstatic.sh
