[metadata]
description_file = README.md

[flake8]
ignore = E402,E501,W503,W504,E731,E741
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,.vscode

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[mypy]
python_version = 3.7
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
plugins = mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = config.settings.test

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[codespell]
skip = *.po,,*/static,*.png,*.jpg,*.jpeg,*.svg,*.ico,*.zip,*.pdf,*.egg-info,*/build
ignore-words-list=delink,mimicing,beforeall,afterall,ninjs,womens
count =
quiet-level = 3
